fix option label spacing

--- a/style/widgets.scss
+++ b/style/widgets.scss
@@ -235,4 +235,8 @@
   .editable-label {
     text-align: right;
   }
+
+  .combo-label .label {
+    margin-bottom: 0;
+  }
 }
